--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -75,7 +75,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android.text="Forgot Password?"
+                android:text="Forgot Password?"
                 android:layout_gravity="end"
                 android:layout_marginTop="8dp"/>
 
@@ -99,6 +99,7 @@
                     android:text="Don\'t have an account? "/>
 
                 <TextView
+                    android:id="@+id/tvSignUp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Sign up!"
