--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -77,18 +77,19 @@
 
     <TextView
         android:id="@+id/tvSkip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="76dp"
+        android:layout_height="58dp"
         android:layout_marginBottom="36dp"
         android:padding="16dp"
         android:text="Skip"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/btnNext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="76dp"
+        android:layout_height="61dp"
         android:layout_marginBottom="36dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="16dp"
