added firebase works

--- a/app/src/main/res/layout/fragment_service_history.xml
+++ b/app/src/main/res/layout/fragment_service_history.xml
@@ -10,6 +10,7 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="16dp"
         android:src="@drawable/ic_arrow_back"
@@ -20,6 +21,7 @@
         android:id="@+id/tvServiceHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="Service History"
         android:textSize="20sp"
         android:textStyle="bold"
