--- a/app/src/main/res/layout/step_find_dealer.xml
+++ b/app/src/main/res/layout/step_find_dealer.xml
@@ -36,7 +36,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:text="CHANGE"                app:icon="@drawable/ic_bike_service" />
+                android:text="CHANGE"
+                app:icon="@drawable/ic_bike_service" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
