--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -178,7 +178,14 @@
         android:id="@+id/signupFragment"
         android:name="com.example.xtrememoto.SignupFragment"
         android:label="fragment_signup"
-        tools:layout="@layout/fragment_signup" />
+        tools:layout="@layout/fragment_signup">
+        <action
+            android:id="@+id/action_signupFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/signupFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/serviceBookingFragment"
         android:name="com.example.xtrememoto.ServiceBookingFragment"
@@ -206,5 +213,14 @@
         android:id="@+id/bikesFragment"
         android:name="com.example.xtrememoto.BikesFragment"
         android:label="fragment_bikes"
-        tools:layout="@layout/fragment_bikes" />
+        tools:layout="@layout/fragment_bikes" >
+        <action
+            android:id="@+id/action_bikesFragment_to_bikeDetailFragment"
+            app:destination="@id/bikeDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/bikeDetailFragment"
+        android:name="com.example.xtrememoto.BikeDetailFragment"
+        android:label="fragment_bike_detail"
+        tools:layout="@layout/fragment_bike_detail" />
 </navigation>
