--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,12 +19,12 @@
         android:id="@+id/tvLoginTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LOG IN TO YOUR SUZUKI ACCOUNT"
-        android:textStyle="bold"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/ivLogo"
+        android:text="LOG IN TO YOUR XTREME MOTO ACCOUNT"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/ivLogo" />
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
@@ -123,12 +123,6 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:text="Dealer Location" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:text="Became a partner" />
 
         <TextView
             android:layout_width="wrap_content"
