--- a/app/src/main/res/layout/fragment_add_service_booking.xml
+++ b/app/src/main/res/layout/fragment_add_service_booking.xml
@@ -67,8 +67,9 @@
         app:layout_constraintTop_toBottomOf="@id/tvOr">
 
         <AutoCompleteTextView
+            android:id="@+id/acTVselectDivision"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="68dp"
             android:inputType="none"
             android:text="Select Division"
             android:textColor="@color/black" />
@@ -85,6 +86,7 @@
         app:layout_constraintTop_toBottomOf="@id/tvOr">
 
         <AutoCompleteTextView
+            android:id="@+id/acTVselectDistrict"
             android:layout_width="match_parent"
             android:layout_height="68dp"
             android:inputType="none"
@@ -100,5 +102,14 @@
         android:backgroundTint="@color/suzuki_blue_light"
         android:text="Search"
         app:layout_constraintTop_toBottomOf="@id/tilDivision" />
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mvNearestDealer"
+        android:layout_width="414dp"
+        android:layout_height="340dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="362dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
