--- a/app/src/main/res/layout/fragment_documents.xml
+++ b/app/src/main/res/layout/fragment_documents.xml
@@ -11,6 +11,7 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="16dp"
         android:src="@drawable/ic_arrow_back"
